--- a/missingkids/less/hero.less
+++ b/missingkids/less/hero.less
@@ -252,7 +252,7 @@
           max-height: 351px;
         }
         .hero-content-wrapper {
-          left: 10px;
+          padding: 0 10px;
           .hero-content{
             left: 0;
           }
